# cran-parser

./: .gitignore  README.md  main.py  pkg_in.csv  pkg_out.scv  pyproject.toml  requirements.txt
src/: dependency_tree.py  html_table_parser.py  package.py
